# MCDevTool

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.py  mcdk.cpp  mcdk_cli.cpp  xmake.lua
.github/workflows/: build-artifacts.yml  macos-build.yml
debugger/: README.md
docs/: core-library.md  mcp-game-testing-workflow.md  minecraft-runtime-agent.md  release-notes-jsonui-debugger.md  shader-reload.md
docs/ui-debugger/: README.md  game-api.md  mcp-tools.md  netease-ui-debugger.md  runtime-jsonui-api.md  safety-probing.md  structured-layout-and-html.md
include/: mcdevtool.h
include/mcdevtool/: addon.h  debug.h  env.h  game_discovery.h  level.h  reload.h  style.h  utils.h
include/mcdk_core/: core.h  launch_config.h  launcher.h
libs/cpp-mcp/include/: mcp_logger.h  mcp_message.h
libs/cpp-mcp/src/: mcp_server.cpp
libs/nbt/: .gitignore  AutoCMakeLists.txt  CMakeLists.txt  README.md  xmake.lua
libs/nbt/include/nbt-c/: Macros.h
libs/nbt/include/nbt/io/: BytesDataInput.hpp  BytesDataOutput.hpp
libs/nbt/libs/binarystream/: .gitignore  CMakeListsAuto.txt  README.md  xmake.lua
libs/nbt/libs/binarystream/include/binarystream/: BinaryStream.hpp  ReadOnlyBinaryStream.hpp
libs/nbt/libs/binarystream/src/binarystream/: BinaryStream.cpp  ReadOnlyBinaryStream.cpp
libs/nbt/src/nbt/detail/: FileUtils.cpp  Validate.hpp
libs/nbt/src/nbt/io/: BytesDataInput.cpp  BytesDataOutput.cpp
mods/: .gitignore  CMakeLists.txt  generate.py
mods/INCLUDE_TEST_MOD/: manifest.json
mods/INCLUDE_TEST_MOD/DEBUG_ENV_SCRIPT/: AgentRuntime.py  Config.py  Game.py  IPCSystem.py  modMain.py
mods/INCLUDE_TEST_MOD/DEBUG_ENV_SCRIPT/Agent/: __init__.py  command.py  control.py  events.py  runtime.py  tasks.py  util.py  world.py
mods/INCLUDE_TEST_MOD/DEBUG_ENV_SCRIPT/QuModLibs/: Util.py
mods/Resource/: INCLUDE_MOD.cpp  INCLUDE_MOD.h
mods/Resource/include/: INCLUDE_MOD.h
plans/: core-mode-v2.md
python/: config.json  run  run.py
skills/mcdk-mcp-game-testing-workflow/: SKILL.md
src/: addon.cpp  core.cpp  debug.cpp  env.cpp  game_discovery.cpp  launch_config.cpp  level.cpp  reload.cpp  style.cpp  utils.cpp
src/platform/: env.cpp  env.h
tests/: .mcdev.json  AutoCpp.py  CMakeLists.txt  captureTest.cpp  core_smoke_test.cpp  ipc_json_test.cpp  levelNbt.py  level_options_test.cpp  mcdkTest.py  mcdk_api_test.c  mcp_server_test.cpp  netease_world_behavior_packs.json  netease_world_resource_packs.json  py2Client.py  py_hot_reload_filter_test.cpp  stdoutTest.py  tasks.json  test1.cpp  test2.cpp  test3.cpp  testPy2.py
tests/Resource/: TestRes.cpp  TestRes.h
tests/reloadFiles/: a.py
tools/: CMakeLists.txt
tools/mcdk/: CMakeLists.txt  cli.cpp  main.cpp
tools/mcdk/libs/: CLI11.hpp
tools/mcdk/modules/: config.hpp  console.hpp  env.hpp  game_agent.hpp  hotreload.hpp  ipc_code_execution.hpp  json_diagnostics.hpp  jsonui_debugger.hpp  jsonui_reload_support.hpp  level.hpp  log_buffer.hpp  material_reload_support.hpp  mcp_server.hpp  mcp_tool_definitions.hpp  mod_dir_config.hpp  mod_register.hpp  particle_reload_support.hpp  shader_reload_support.hpp  style_processor.hpp  utils.hpp  world_project.hpp
tools/mcdk/platform/: runtime.cpp  runtime.hpp
tools/mcdk_api/: CMakeLists.txt
tools/mcdk_api/include/: mcdk_api.h
tools/mcdk_api/src/: mcdk_api.cpp
tools/mcdk_stdio_bridge/: CMakeLists.txt  README.md  main.cpp
